--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.19"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
